<resources>
    <string name="app_name">Lagu</string>
    <string name="search">Find</string>
    <string name="wishlist">Wishlist</string>
    <string name="calendar">Calendar</string>
    <string name="create">Create</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="google_login">Google</string>
    <string name="facebook_login">Facebook</string>
    <string name="search_artist">Search Artist</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="guest_login">Guest</string>
    <string name="label_name">Name</string>
    <string name="label_date">Date</string>
    <string name="save">Save</string>
    <string name="notification_channel_description">This is a sample notification channel for demonstration purpose.</string>
</resources>
